README: Added sun.font